Fix alignment issues on certificate
The names on the certificate were mis aligned during the generation. We fixed the alignment values to be relative to the certificate dimensions

--- a/src/index.css
+++ b/src/index.css
@@ -130,10 +130,10 @@ form input[type="submit"]:hover {
   justify-content: center;
   align-items: center;
 
-  max-width: 90%;
+  max-width: 100%;
   width: 612px;
   height: 612px;
-  margin: 0 25px;
+  margin: 0px;
   border: 3px solid var(--clr-blue);
   border-radius: 4px;
 
@@ -141,8 +141,8 @@ form input[type="submit"]:hover {
 }
 
 .image img {
-  width: 512px;
-  height: 512px;
+  width: 100%;
+  height: 100%;
   border-radius: 6px;
 }
 
